--- a/Bank Mestika/Info.plist
+++ b/Bank Mestika/Info.plist
@@ -8,7 +8,7 @@
 		<string>Montserrat-Light.ttf</string>
 		<string>Montserrat-Bold.ttf</string>
 		<string>Montserrat-ExtraBold.ttf</string>
-		<string>Montserrat-Reguler.ttf</string>
+		<string>Montserrat-Regular.ttf</string>
 		<string>Montserrat-SemiBold.ttf</string>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
